# experanto

./: .gitignore  .readthedocs.yml  CODEBASE_ANALYSIS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  apptainer-compose.sh  apptainer.def  diff_output.txt  docker-compose.yml  experiment.ipynb  pyproject.toml  requirements.txt  setup.py  test.ipynb
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs.yml  ruff.yml  test.yml
configs/: benchmarking.yaml  default.yaml  monkeyFixationOldFormat.yaml
docs/source/: api.rst  conf.py  configuration.rst  contributing.md  index.rst  requirements.txt
docs/source/_templates/: custom-class-template.rst
docs/source/concepts/: demo_configs.rst  demo_data.rst  demo_dataset.rst  demo_experiment.rst  demo_multisession.rst  getting_started.rst  installation.rst
examples/: 0_generate_sample.ipynb  1_experiment_demo.ipynb  2_dataset_demo.ipynb  3_multi_session_demo.ipynb  4_sensorium_demo.ipynb  MonkeyDataLoadingAndSanityChecks.ipynb  OldDatasetGen.ipynb  allen_demo.ipynb  allen_example.ipynb  dandi_experanto_example.ipynb  data.ipynb  dataset_demo.ipynb  demo.ipynb  experiment.ipynb  generate_sample.ipynb  images.ipynb  interpolator_demo.ipynb  multi_session_demo.ipynb  multisession_demo.ipynb  playground_spike.ipynb  playground_spike.py  sensorium_demo.ipynb  sensorium_min_example.ipynb  simple_multimodal_loader.ipynb  spikeinterpolator.ipynb  videos.ipynb
examples/sensorium/: data.ipynb  experiment.ipynb  images.ipynb  interpolator_demo.ipynb  multisession_demo.ipynb  sensorium_min_example.ipynb  videos.ipynb
experanto/: __init__.py  configs.py  data.py  dataloaders.py  datasets.py  experiment.py  interpolators.py  intervals.py  utils.py
experanto/benchmark/: benchmark_dataloader.py
experanto/filters/: common_filters.py
experanto/interpolators/: __init__.py  base.py  create.py  registry.py  screen_interpolator.py  sequence_interpolator.py
gsoc_env/: pyvenv.cfg
gsoc_env/Scripts/: activate  activate.bat  numba  pygrun
scripts/: check_sessions.ipynb  check_sessions.py  combine_metadatas.py  dataset_filter.ipynb  filter_playground.ipynb  run_distributed_dataloaders.py  run_stateful_dataloader.ipynb  run_stateful_dataloaders.py
tests/: conftest.py  create_experiment.py  create_mock_data.py  create_screen_data.py  create_sequence_data.py  create_spikes_data.py  create_time_intervals_data.py  test_experiment.py  test_intervals.py  test_linear_interpolator.py  test_screen_interpolation.py  test_screen_interpolator.py  test_sequence_interpolation.py  test_sequence_interpolator.py  test_sequence_interpolators.py  test_session_dataloaders.py  test_spikes_interpolator.py  test_time_intervals_interpolator.py
