[project]
name = "experanto"
version = "0.1"
description = "Python package to interpolate recordings and stimuli of neuroscience experiments"
readme = "README.md"
requires-python = ">=3.9"

# Since you want to keep requirements.txt, omit dependencies here.

[tool.setuptools.packages.find]
where = ["."]
include = ["experanto*", "configs"]

[tool.setuptools.package-data]
"configs" = ["*.yaml"]

[project.urls]
Homepage = "https://github.com/sensorium-competition/experanto"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
  \.git
  | \.venv
  | build
  | dist
  | \.ipynb_checkpoints
)/
'''

[tool.isort]
skip = [".ipynb_checkpoints"]
profile = "black"
line_length = 88
known_first_party = ["experanto"]
