[project]
name = "experanto"
version = "0.1"
description = "Python package to interpolate recordings and stimuli of neuroscience experiments"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "scipy>=1.13.1",
    "jaxtyping>=0.2.30",
    "plotly>=5.22.0",
    "pandas",
    "rootutils>=1.0.7",
    "optree>=0.13.0",
    "hydra-core==1.3.2",
    "numpy==2.2.5",
    "omegaconf==2.3.0",
    "opencv_python==4.11.0.86",
    "pytest==8.3.5",
    "PyYAML==6.0.2",
    "torch==2.7.0",
    "torchvision==0.22.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["experanto*", "configs"]

[tool.setuptools.package-data]
"configs" = ["*.yaml"]

[project.urls]
Homepage = "https://github.com/sensorium-competition/experanto"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
  \.git
  | \.venv
  | build
  | dist
  | \.ipynb_checkpoints
)/
'''

[tool.isort]
skip = [".ipynb_checkpoints"]
profile = "black"
line_length = 88
known_first_party = ["experanto"]
