[project]
name = "experanto"
version = "0.1"
description = "Python package to interpolate recordings and stimuli of neuroscience experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ffmpeg-python==0.2.0",
    "scipy>=1.13.1",
    "jaxtyping>=0.2.30",
    "pandas",
    "hydra-core==1.3.2",
    "numba==0.63.1",
    "numpy==2.2.6",
    "omegaconf==2.3.0",
    "opencv-python==4.11.0.86",
    "Pillow==11.2.1",
    "PyYAML==6.0.2",
    "torch==2.9.0",
    "torchcodec==0.9",
    "torchvision==0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-cov>=7.0.0",
    "pyright",
    "hypothesis>=6.0",
]

docs = [
    "sphinx==8.2.3",
    "sphinx-rtd-theme==3.0.2",
    "myst-parser==5.0.0"
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["experanto*", "configs"]

[tool.setuptools.package-data]
"configs" = ["*.yaml"]

[project.urls]
Homepage = "https://github.com/sensorium-competition/experanto"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
  \.git
  | \.venv
  | build
  | dist
  | \.ipynb_checkpoints
)/
'''

[tool.isort]
skip = [".ipynb_checkpoints"]
profile = "black"
line_length = 88
known_first_party = ["experanto"]

[tool.pyright]
include = ["experanto"]
typeCheckingMode = "basic"
pythonVersion = "3.12"
